--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "express": "~3.3.6",
     "jade": "~0.35.0",
-    "less-middleware": "~0.1.12"
+    "less-middleware": "~0.1.12",
+    "mongodb": "~1.3.19"
   },
   "devDependencies": {
     "mocha": "~1.6.0",
