--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "~3.3.6",
     "jade": "~0.35.0",
     "less-middleware": "~0.1.12",
-    "mongodb": "~1.3.19"
+    "mongodb": "~1.3.19",
+    "underscore": "~1.5.2"
   },
   "devDependencies": {
     "mocha": "~1.6.0",
