--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "jade": "~0.35.0",
     "less-middleware": "~0.1.12",
     "mongodb": "~1.3.19",
-    "underscore": "~1.5.2"
+    "underscore": "~1.5.2",
+    "moment": "~2.2.1"
   },
   "devDependencies": {
     "mocha": "~1.6.0",
