--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "less-middleware": "~0.1.12",
     "mongodb": "~1.3.19",
     "underscore": "~1.5.2",
-    "moment": "~2.2.1"
+    "moment": "~2.2.1",
+    "node-uuid": "~1.4.1"
   },
   "devDependencies": {
     "mocha": "~1.6.0",
